# siu-mai

./: .gitignore  README.md  dcs.sbatch  joboutput_781502.err  joboutput_791772.err  joboutput_793424.err  joboutput_793424.out  joboutput_793425.err  joboutput_793426.err  joboutput_793426.out  joboutput_793427.err  joboutput_793431.err  joboutput_793432.err  joboutput_793432.out  joboutput_793435.err  joboutput_793438.err  joboutput_793438.out  joboutput_794825.err  joboutput_794826.err
code/: README.md  charts.ipynb  pyproject.toml
code/code/: base_game.py  random_agent.py
code/tests/: __init__.py  test_base_game.py  test_check_for_win.py  test_players.py  test_random_agent.py  test_tiles.py
code/v1/: DESIGN.md  base_game.py  game_history.csv  game_history_dead.csv  game_history_hand_score.csv  game_history_mmmm_100.csv  game_history_mmmm_50.csv  game_history_mmms_100.csv  game_history_mmms_50.csv  game_history_mmms_500.csv  game_history_mmss_100.csv  game_history_mmss_50.csv  game_history_msss_100.csv  game_history_msss_50.csv  game_history_msss_500.csv  game_state.py  mcts.py  mcts_agent.py  mcts_game_hist.csv  mcts_node.py  metrics.py  players.py  random_agent.py  snapshot.py  test_check_win.py  tiles.py
code/v1_completed/: base_game.py  game_state.py  mcts.py  metrics.py  players.py  tiles.py
code/v2/: base_game.py  game_history_mmmm_100.csv  game_history_mmmm_50.csv  game_history_mmms_50.csv  game_history_mmss_100.csv  game_history_mmss_50.csv  game_history_mmss_500.csv  game_history_msss_100.csv  game_history_msss_50.csv  game_state.py  mcts.py  metrics.py  (+3 more)
(+113 files in other folders)
