[tool.poetry]
name = "code"
version = "0.1.0"
description = ""
authors = ["WoonSim Tan <tan.woonsim@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
base_game = "code.base_game:main"