[tool.poetry]
name = "v1"
version = "0.1.0"
description = ""
authors = ["WoonSim Tan <tan.woonsim@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
base_game = "v1.base_game:main"

[tool.pytest.ini_options]
pythonpath = "v1"