[tool.poetry]
name = "v1"
version = "0.1.0"
description = ""
authors = ["WoonSim Tan <tan.woonsim@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
pytest = "^7.4.2"
black = "^23.10.1"
pandas = "^2.1.2"
mahjong = "^1.2.1"
numba = "^0.58.1"


[tool.poetry.group.dev.dependencies]
coverage = {extras = ["toml"], version = "^7.3.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
base_game = "v1.base_game:main"
metrics = "v1.metrics:main"
review = "v1.base_game:review"

[tool.pytest.ini_options]
pythonpath = "v1"

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "*/tests/*"]

[tool.coverage.report]
fail_under = 95
